# bifolio

./: .gitignore  DBCHOICE.md  README.md  codecov.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug.md
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  feature.md  release.md
.github/workflows/: checks.yml  codeql-analysis.yml  testing.yml
bifolio/: Dockerfile  __init__.py  config.py  main.py  requirements.txt  server.py
bifolio/auth/: __init__.py  auth.py
bifolio/blueprints/: account.py  api.py  home.py  profile.py  transactions.py
bifolio/database/: models.py
bifolio/domain/: finance.py
bifolio/middlewares/: session.py
bifolio/models/: __init__.py  item.py
bifolio/static/tailwindcss/: package-lock.json  package.json  tailwind.config.js
bifolio/static/tailwindcss/src/: bifolio.js  home.html  index.html  input.css  layout.html  no_auth_layout.html  output.css  profile.html  register.html  script.js  simple.html
bifolio/storage/: rdb.py  storage.py
bifolio/tools/: j2.py  jwt.py  returns.py
cacher/: Dockerfile  requirements.txt  server.py
tests/: conftest.py  stock_data.json  test_cov.py  test_domain.py  test_server.py  test_version.py
