[project]
name = "bifolio"
version = "0.0.1"
description = "TBD"
authors = [
    {name = "Konstantin Templin", email = "1qnbhd@gmail.com"}
]
maintainers = [
    {name = "Konstantin Templin", email = "1qnbhd@gmail.com"}
]
urls = {Repository = "https://github.com/qnbhd/bifolio"}
readme = "README.md"
keywords = ["crypto"]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["sanic>=22.6.2"]
classifiers = [
        "Intended Audience :: Developers",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3 :: Only",
]

[build-system]
requires = [
    "setuptools>=45",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["tests", "docs"]

[tool.black]
line-length = 70
target-version = ['py36']
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | \.venv
  | dist
  | docs
)/
'''

[tool.isort]
profile = 'black'
src_paths = ['feijoa', 'tests']
line_length = 70
lines_after_imports = 2
force_single_line = 'True'
force_sort_within_sections = 'True'
order_by_type = 'False'

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
addopts = "--color=yes"

[tool.pydocstyle]
inherit = false
ignore = 'D100,D104,D107,D202,D203,D212,D400,D401,D405,D406,D407,D415'
match = '.*\.py'
